--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <div class="swiper-slide"><img class="slide-img" src="./images/9.png" alt="Kiara" /></div>
       <div class="swiper-slide"><img class="slide-img" src="./images/10.png" alt="Kiara" /></div>
       <div class="swiper-slide"><img class="slide-img" src="./images/11.jpg" alt="Kiara" /></div>
-      <div class="swiper-slide"><img class="slide-img" src="./images/12.jpg" alt="Kiara" /></div>
     </div>
   </div>
   <div class="swiper-button-prev"></div>
   <div class="swiper-button-next"></div>
   <nav class="main-nav">
     <img class="emoji" alt="kiara" src="./images/logo.png">
+  </nav>
 
-    <script src="https://unpkg.com/popmotion@8.5.0/dist/popmotion.global.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/js/swiper.js"></script>
-    <script src="./my-gallery.js"></script>
+  <script src="https://unpkg.com/popmotion@8.5.0/dist/popmotion.global.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/js/swiper.js"></script>
+  <script src="./my-gallery.js"></script>
 </body>
 
 </html>
